--- a/.github/workflows/branchout.yml
+++ b/.github/workflows/branchout.yml
@@ -41,6 +41,7 @@ jobs:
 
 deploy_staging:
     runs-on: ubuntu-latest
+    environment: staging
     steps:
       - name: Download files from the current repository
         uses: actions/checkout@v3
@@ -53,6 +54,7 @@ deploy_staging:
 
   deploy_prod:
     runs-on: ubuntu-latest
+    environment: production
     steps:
 #      - name: Download files from the current repository
 #        uses: actions/checkout@v3
