--- a/.github/workflows/branchout.yml
+++ b/.github/workflows/branchout.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Download files from the current repository
         uses: actions/checkout@v3
         with:
-          ref: $BRANCH_NAME
+          ref: ${{env.BRANCH_NAME}}
       - name: Deploy to release env
         run: |
           git checkout
@@ -46,7 +46,7 @@ jobs:
         - name: Download files from the current repository
           uses: actions/checkout@v3
           with:
-            ref: $BRANCH_NAME
+            ref: ${{env.BRANCH_NAME}}
         - name: Deploy to release env
           run: |
             git checkout
