--- a/.github/workflows/branchout.yml
+++ b/.github/workflows/branchout.yml
@@ -41,24 +41,26 @@ jobs:
 
   deploy_staging:
       runs-on: ubuntu-latest
+      needs: deploy_release
       environment: staging
       steps:
         - name: Download files from the current repository
           uses: actions/checkout@v3
           with:
             ref: ${{env.BRANCH_NAME}}
-        - name: Deploy to release env
+        - name: Deploy to staging env
           run: |
             git checkout
 
   deploy_production:
     runs-on: ubuntu-latest
+    needs: deploy_staging
     environment: production
     steps:
   #      - name: Download files from the current repository
   #        uses: actions/checkout@v3
   #        with:
   #          ref: $BRANCH_NAME
-      - name: Import changes to the Auth0 Production account
+      - name: Deploy to production env
         run: |
           git checkout
