--- a/.github/workflows/cherry.yml
+++ b/.github/workflows/cherry.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Download files from the current repository
         uses: actions/checkout@v3
         with:
-          ref: ${{env.BRANCH_NAME}}
+          ref: ${{github.ref_name}}
       - name: Deploy to release env
         run: |
           git checkout
@@ -24,10 +24,11 @@ jobs:
         - name: Download files from the current repository
           uses: actions/checkout@v3
           with:
-            ref: ${{env.BRANCH_NAME}}
+            ref: ${{github.ref_name}}
         - name: Deploy to staging env
           run: |
             git checkout
+
   deploy_production:
     runs-on: ubuntu-latest
     needs: deploy_staging
@@ -36,7 +37,7 @@ jobs:
       - name: Download files from the current repository
         uses: actions/checkout@v3
         with:
-          ref: $BRANCH_NAME
+          ref: ${{github.ref_name}}
       - name: Deploy to production env
         run: |
           git checkout
